Bug 121180 - Crash restarting LibreOffice after applying an option (no crash if going via "OK")
Summary: Crash restarting LibreOffice after applying an option (no crash if going via ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: highest critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bisected, haveBacktrace
: 121578 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-05 17:17 UTC by Roman Kuznetsov
Modified: 2019-01-21 11:56 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash with master (17.89 KB, text/plain)
2018-11-07 16:36 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2018-11-05 17:17:39 UTC
This bug was filed from the crash reporting server and is br-a826e0d1-367c-42ff-b563-c4793b3191b8.
=========================================

Make sure LibreOffice has disable OpenGL
Go to Tools->Options->LibreOffice->View
Enable OpenGL
Push Apply
Look at question about restart of LO.
Push Restart
LO is crashed with this crashreport

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 0b2d153f58c83fb289c96b348631e44e553b1a9a
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2018-11-02_21:11:48
Locale: ru-RU (ru_RU); Calc: threaded
Comment 1 Roman Kuznetsov 2018-11-05 17:20:37 UTC
Xisco, I repro this everytime when after "Apply" I select "Restart now"
Comment 2 Xisco Faulí 2018-11-06 08:36:37 UTC
Hi Roman,
Could you please share the opengl_device.log ? More info -> https://wiki.documentfoundation.org/QA/FirstSteps#Graphics-related_issues_.28OpenGL.29
Comment 3 Roman Kuznetsov 2018-11-06 10:25:50 UTC
(In reply to Xisco Faulí from comment #2)
> Hi Roman,
> Could you please share the opengl_device.log ? More info ->
> https://wiki.documentfoundation.org/QA/FirstSteps#Graphics-related_issues_.
> 28OpenGL.29

I'll make it tonight
---------------------
Additional info:

I have build 

Version: 6.2.0.0.alpha1+
Build ID: 6896f39ffd8a6c4b32b8f601a6a93678247456bd
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-11-05_22:40:18
Locale: ru-RU (ru_RU); Calc: threaded

on another computer. With OpenGL_log:

DriverVersion: 10.18.10.4425
DriverDate: 4-4-2016
DeviceID: PCI\VEN_8086&DEV_0166&SUBSYS_21F717AA&REV_09
AdapterVendorID: 0x8086
AdapterDeviceID: 0x0166
AdapterSubsysID: 0x21f717aa
DeviceKey: System\CurrentControlSet\Control\Video\{92E621FD-7AE7-489A-8F2F-47AFD10834D8}\0000
DeviceString: Intel(R) HD Graphics 4000

Enable/Disable Experimental features. Then pushing buttons "Apply"->"Restart now" in dialog Options (Tools->Options from Start Center!) always gives crash.
Comment 4 Buovjaga 2018-11-07 16:36:03 UTC
Repro, only with Apply.

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 317f5f2323b8ff7948c4812faaeb0c2a3b907ce8
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-07_02:31:39
Locale: fi-FI (fi_FI); Calc: threaded

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: dbe94dd3b64e74f661ea7193d8e06ac91f1dd7b0
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 7 November 2018
Comment 5 Buovjaga 2018-11-07 16:36:23 UTC
Created attachment 146408 [details]
GDB trace of crash with master
Comment 6 Xisco Faulí 2018-11-07 16:53:42 UTC
I can reproduce the crash back to https://cgit.freedesktop.org/libreoffice/core/commit/?id=92026741ed7e83119f1de51528480c5a937c0e88 when the apply button was introduced. However, I reported bug 118608 back there and I didn't reproduce the crash, now I can... weird.

Increasing severity as Dialdo seems no longer involved...
Comment 7 Katarina Behrens (Inactive) 2018-11-16 14:18:01 UTC
Is this still crashing for anyone? W/ custom master build as of today (16th Nov) it ain't anymore for me on gtk3_kde5, kde5, gen. gtk3 has OpenGL options disabled and I can't easily test Win

I can still repro bug 118608 i.e. it wouldn't restart but no crash
Comment 8 Buovjaga 2018-11-16 17:09:09 UTC
(In reply to Katarina Behrens (CIB) from comment #7)
> Is this still crashing for anyone? W/ custom master build as of today (16th
> Nov) it ain't anymore for me on gtk3_kde5, kde5, gen. gtk3 has OpenGL
> options disabled and I can't easily test Win
> 
> I can still repro bug 118608 i.e. it wouldn't restart but no crash

No need for OpenGL - you can use "Experimental features" or anything that requires a restart. "Apply" is important. I can still repro. Build is not from 16th, but pretty close.

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: 72e6269b88a32a672e00d2c25f0d0400038d1360
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 14 November 2018
Comment 9 Roman Kuznetsov 2018-11-16 17:12:07 UTC
I still repri in build from 15 november in windows
Comment 10 Xisco Faulí 2018-11-16 17:16:33 UTC
I can reproduce it in

Version: 6.2.0.0.alpha1+
Build ID: 5edc23dbc53773536265fd6a54319d9cd1cd9e99
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

try with SAL_USE_VCLPLUGIN=gen instdir/program/soffice
Comment 11 Xisco Faulí 2018-11-21 11:20:44 UTC
*** Bug 121578 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2018-12-13 11:02:53 UTC
@Mike, since you fixed bug 122038, I thought you could be interested in this issue...
Comment 13 Mike Kaganski 2018-12-13 11:25:37 UTC
https://gerrit.libreoffice.org/65090
Comment 14 Commit Notification 2018-12-13 13:23:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0fa14d58457e9418ff756a0efd66e365c4403a67%5E%21

tdf#121180: close Options dialog when restart is confirmed

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2018-12-14 16:25:53 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 12e878d3b5e8a59079811c36b7c89e588266dd0e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Mike Kaganski, thanks for fixing this!!

Cherry-picked to 6-2 -> https://gerrit.libreoffice.org/#/c/65184/
Comment 16 Commit Notification 2018-12-17 08:46:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/9be9b4072741ac3c7282f272484df1f65aa2765e%5E%21

tdf#121180: close Options dialog when restart is confirmed

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.