svtools/source/dialogs/restartdialog.cxx
@@ -90,18 +90,20 @@ IMPL_LINK_NOARG(RestartDialog, hdlNo, weld::Button&, void)
 
 }
 
-void svtools::executeRestartDialog(
+bool svtools::executeRestartDialog(
     css::uno::Reference< css::uno::XComponentContext > const & context,
     weld::Window* parent, RestartReason reason)
 {
     auto xRestartManager = css::task::OfficeRestartManager::get(context);
     if (xRestartManager->isRestartRequested(false))
-        return; // don't try to show another dialog when restart is already in progress
+        return true; // don't try to show another dialog when restart is already in progress
     RestartDialog aDlg(parent, reason);
     if (aDlg.run()) {
         xRestartManager->requestRestart(
             css::uno::Reference< css::task::XInteractionHandler >());
+        return true;
     }
+    return false;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
